Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Prinsesa ko</title>
+    <title>Sorry ah</title>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jscex@0.6.5/jscex.min.js"></script>
@@ -698,17 +698,17 @@
         <div id="wrap">
             <div id="text">
                 <div id="code">
-                    <span class="say">Hello Prinsesa ko，</span><br>
-                    <span class="say">Kahit Kupal ka，</span><br>
-                    <span class="say">Liligawan Kita。</span><br>
+                    <span class="say">Hello，</span><br>
+                    <span class="say">Kahit na wala nako，</span><br>
+                    <span class="say">Hinako aasa na  mag babalikan tau</span><br>
                     <span class="say">Pag Mahal Mo，</span><br>
-                    <span class="say">Ipaglaban Mo。</span><br>
-                    <span class="say">Kaya,Maghihintay ako，</span><br>
-                    <span class="say">Prinsesa ko。</span><br>
+                    <span class="say">Hayaan mo kung san sya masaya 。</span><br>
+                    <span class="say">Kaya pinaparaya na kita，</span><br>
+                    <span class="say">Mahal na mahal kita。</span><br>
                     <br>
 
                     
-                    <span class="say"><span class="space"></span> -- From Your: Crush.</span>
+                    <span class="say"><span class="space"></span> -- From Your: nothing.</span>
                 </div>
             </div>
             <div id="clock-box">
@@ -885,5 +885,6 @@
 
 
 </body>
+
 
 </html>
